--- a/liff-app/liff.css
+++ b/liff-app/liff.css
@@ -22,7 +22,7 @@ p {
 .btn-led-toggle {
     box-shadow: 0 4pt 8pt 0 rgba(0,0,0,0.2), 0 3pt 10pt 0 rgba(0,0,0,0.19);
     color: white; /* Light */
-    background-color: #74c4df; /* Gray */
+    background-color: green; /* Gray */
     width: 160pt;
     font-weight: bold;
     height: 40pt;
@@ -33,7 +33,7 @@ p {
 .btn-led-toggle:active {
     transform: translateY(4pt);
     box-shadow: 0 2pt 4pt 0 rgba(0,0,0,0.2), 0 1pt 5pt 0 rgba(0,0,0,0.19);
-    background-color: #CFE4F4; /* Gray */
+    background-color: red; /* Gray */
 }
 
 .led-on, .led-on:active {
